--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongoose": "^8.14.2",
+    "openai": "^4.98.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
