--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongoose": "^8.14.2",
+    "multer": "^1.4.5-lts.2",
     "openai": "^4.98.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
