--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
     "dotenv": "^16.5.0",
+    "elevenlabs": "^1.58.0",
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "mongoose": "^8.14.2",
