--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet\""
   },
   "repository": {
     "type": "git",
@@ -21,16 +21,18 @@
   },
   "homepage": "https://github.com/sandeepgd/skunkworks-2025#readme",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.96",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.17",
     "dotenv": "^16.5.0",
     "elevenlabs": "^1.58.0",
     "express": "^4.18.2",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
-    "openai": "^4.98.0",
+    "openai": "^4.98.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
