--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "express": "^4.18.2",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
-    "openai": "^4.98.0"
+    "openai": "^4.98.0",
+    "twilio": "^5.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
+    "@types/twilio": "^3.19.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
