--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
+    "on-finished": "^2.4.1",
     "openai": "^4.98.0",
     "twilio": "^5.6.1"
   },
@@ -37,6 +38,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
     "@types/twilio": "^3.19.2",
+    "@types/on-finished": "^2.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
