--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,8 @@
+# Redirect www.wassupfam.com to wassupfam.com
+www.wassupfam.com {
+  redir https://wassupfam.com{uri}
+}
+
 wassupfam.com {
   # Enable compression
   encode gzip
