Remove /api prefix from endpoints

--- a/Caddyfile
+++ b/Caddyfile
@@ -20,10 +20,10 @@ api.wassupfam.com {
 
   # Reverse proxy to your application
   reverse_proxy app:3000 {
-      # Every 30 seconds, Caddy will ping /api/health.
+      # Every 30 seconds, Caddy will ping /health.
       # If the app doesn’t respond with a 200 OK, Caddy will treat the backend as unhealthy and stop
       # sending traffic there.
-      health_uri /api/health
+      health_uri /health
       health_interval 30s
   }
 
